--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
         "mercurius": "^16.1.0"
     },
     "devDependencies": {
+        "@semantic-release/changelog": "^6.0.3",
+        "@semantic-release/git": "^10.0.1",
+        "@semantic-release/github": "^11.0.1",
         "@types/node": "^22.14.1",
         "nodemon": "^3.1.9",
+        "semantic-release": "^24.2.3",
         "ts-node": "^10.9.2",
         "tsx": "^4.19.3",
         "typescript": "^5.8.3"
