fix: enhance security in deployment configuration and Dockerfile

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
   release:
     name: Semantic Release
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     outputs:
       version: ${{ steps.get_version.outputs.version }}
     steps:
@@ -38,18 +39,63 @@ jobs:
           VERSION=$(git describe --tags --abbrev=0)
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-  build-and-deploy:
-    name: Build and Deploy
+  docker-build-and-push:
+    name: Build and Push Docker Image
     needs: release
     if: needs.release.outputs.version != ''
     runs-on: ubuntu-latest
-    environment: ${{ github.ref_name == 'main' && 'production' || 'development' }}
+    timeout-minutes: 15
+    outputs:
+      version: ${{ steps.set_version.outputs.version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set VERSION from previous job
-        run: echo "VERSION=${{ needs.release.outputs.version }}" >> $GITHUB_ENV
+        id: set_version
+        run: echo "version=${{ needs.release.outputs.version }}" >> $GITHUB_OUTPUT
+
+      - name: Log in to Azure
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Set up Docker to use ACR
+        run: |
+          az acr login --name ${{ secrets.ACR_NAME }}
+
+      - name: Docker Build and Tag
+        run: |
+          docker build --no-cache \
+            --build-arg NODE_ENV=${{ github.ref_name == 'main' && 'production' || 'development' }} \
+            --label org.opencontainers.image.revision=${{ github.sha }} \
+            --label org.opencontainers.image.version=${{ needs.release.outputs.version }} \
+            -t ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ needs.release.outputs.version }} .
+          docker tag ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ needs.release.outputs.version }} ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:latest
+
+      - name: Docker Push
+        run: |
+          docker push ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ needs.release.outputs.version }}
+          docker push ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:latest
+
+      - name: Save metadata artifact
+        run: echo "Version=${{ needs.release.outputs.version }}" > metadata.txt
+
+      - name: Upload metadata artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-metadata
+          path: metadata.txt
+
+  aks-deploy:
+    name: Deploy to AKS
+    needs: docker-build-and-push
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    environment: ${{ github.ref_name == 'main' && 'production' || 'development' }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Log in to Azure
         uses: azure/login@v2
@@ -63,36 +109,30 @@ jobs:
           sudo mv kubelogin/bin/linux_amd64/kubelogin /usr/local/bin
           kubelogin --version
 
-      - name: Set up Docker to use ACR
-        run: |
-          az acr login --name ${{ secrets.ACR_NAME }}
-
-      - name: Docker Build and Tag
-        run: |
-          docker build --no-cache -t ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:$VERSION .
-          docker tag ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:$VERSION ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:latest
-
-      - name: Docker Push
-        run: |
-          docker push ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:$VERSION
-          docker push ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:latest
-
       - name: Set AKS Context
         uses: azure/aks-set-context@v4
         with:
           cluster-name: ${{ secrets.AKS_CLUSTER }}
           resource-group: ${{ secrets.AZURE_RG }}
 
+      - name: Create GitHub deployment
+        uses: bobheadxi/deployments@v1
+        with:
+          step: start
+          token: ${{ secrets.GITHUB_TOKEN }}
+          env: ${{ github.ref_name == 'main' && 'production' || 'development' }}
+
       - name: Debug environment variables
         run: |
-          echo "IMAGE_TAG=$VERSION"
+          echo "IMAGE_TAG=${{ needs.docker-build-and-push.outputs.version }}"
           echo "ACR_NAME=${{ secrets.ACR_NAME }}"
 
       - name: Render deployment.yaml with secrets
         run: |
+          echo "VERSION=${{ needs.docker-build-and-push.outputs.version }}" >> $GITHUB_ENV
           envsubst < deployment/deployment.yaml > deployment/deployment.final.yaml
         env:
-          IMAGE_TAG: ${{ env.VERSION }}
+          IMAGE_TAG: ${{ needs.docker-build-and-push.outputs.version }}
           ACR_NAME: ${{ secrets.ACR_NAME }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
@@ -104,3 +144,12 @@ jobs:
           kubectl apply -f deployment/service.yaml
           kubectl apply -f deployment/ingress.yaml
           kubectl rollout status deployment/${{ env.IMAGE_NAME }} -n wizeworks
+
+      - name: Mark deployment as successful
+        if: success()
+        uses: bobheadxi/deployments@v1
+        with:
+          step: finish
+          token: ${{ secrets.GITHUB_TOKEN }}
+          status: success
+          env: ${{ github.ref_name == 'main' && 'production' || 'development' }}
