--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -28,12 +28,12 @@ spec:
         env:
         - name: ENVIRONMENT
           value: "production"
-        - name: SUPABASE_URL
-          value: "${SUPABASE_URL}"
-        - name: SUPABASE_KEY
-          value: "${SUPABASE_KEY}"
+        - name: MONGO_URI
+          value: "${MONGO_URI}"
         - name: SENTRY_DSN
           value: "${SENTRY_DSN}"
+        - name: DB_NAME
+          value: "${DB_NAME}"
         resources:
           requests:
             memory: "128Mi"
