--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "wize-content",
     "version": "0.1.0",
-    "description": "wize content api",
+    "description": "WizeWorks Content API",
     "main": "dist/server.js",
     "type": "commonjs",
     "scripts": {
@@ -15,23 +15,23 @@
     "author": "WizeWorks",
     "license": "MIT",
     "dependencies": {
+        "@graphql-yoga/node": "^3.9.1",
         "@sentry/node": "^9.13.0",
         "@sentry/profiling-node": "^9.13.0",
-        "@supabase/postgrest-js": "^1.19.4",
-        "@supabase/supabase-js": "^2.49.4",
-        "@wizeworks/graphql-factory": "^1.6.1",
+        "@wizeworks/graphql-factory-mongo": "^1.19.0",
         "chalk": "^5.4.1",
         "dotenv": "^16.5.0",
-        "fastify": "^5.3.0",
+        "express": "^5.1.0",
         "graphql": "^16.10.0",
         "graphql-scalars": "^1.24.2",
         "graphql-subscriptions": "^3.0.0",
-        "mercurius": "^16.1.0"
+        "graphql-yoga": "^5.13.4"
     },
     "devDependencies": {
         "@semantic-release/changelog": "^6.0.3",
         "@semantic-release/git": "^10.0.1",
         "@semantic-release/github": "^11.0.1",
+        "@types/express": "^5.0.1",
         "@types/node": "^22.14.1",
         "nodemon": "^3.1.9",
         "semantic-release": "^24.2.3",
