fix: replace manual kubelogin installation with action for improved reliability

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,13 +108,10 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Install kubelogin (for AAD auth)
-        run: |
-          LATEST_VERSION=$(curl -s https://api.github.com/repos/Azure/kubelogin/releases/latest | jq -r .tag_name)
-          curl -LO https://github.com/Azure/kubelogin/releases/download/${LATEST_VERSION}/kubelogin-linux-amd64.zip
-          sudo find kubelogin -name kubelogin -type f -exec mv {} /usr/local/bin \;
-          sudo mv kubelogin/bin/linux_amd64/kubelogin /usr/local/bin
-          kubelogin --version
+      - name: Install kubelogin
+        uses: azure/use-kubelogin@v1
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set AKS Context
         uses: azure/aks-set-context@v4
